<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_backgroup"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.AddBookActivity">

    <TextView
        android:id="@+id/tv_add_book_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/tv_text_add_book_welcome"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/ll_add_book_middle_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tv_add_book_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

<!--        <ImageButton android:layout_width="192dp"-->
<!--                     android:id="@+id/IBT_add_book_image"-->
<!--                     android:layout_height="192dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_book_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_book_id" />

            <EditText
                android:id="@+id/et_book_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_book_name" />

            <EditText
                android:id="@+id/et_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_book_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_book_number" />

            <EditText
                android:id="@+id/et_book_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ll_add_book_middle_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_text_save_info" />

        <Button
            android:id="@+id/btn_cancel_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_text_cancel_add" />

    </LinearLayout>

</RelativeLayout>